--- a/penugasan.html
+++ b/penugasan.html
@@ -4,20 +4,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Profil TKJ - [ABSEN] - [NAMA]</title>
+  <title>Profil TKJ - [13] - [M DZARIL ILHAM]</title>
   <style>
     /* --- CSS internal --- */
-    :root{--bg:#f7f8fb;--card:#ffffff;--accent:#0b5cff;--muted:#666}
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial;margin:0;background:var(--bg);color:#222}
-    .container{max-width:900px;margin:32px auto;padding:24px;background:var(--card);border-radius:12px;box-shadow:0 6px 20px rgba(0,0,0,0.06)}
+    :root{--bg:#000000;--card:#000000;--accent:#0bceff;--muted:#666}
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial;margin:0;background:var(--bg);color:#00fff2}
+    .container{max-width:900px;margin:32px auto;padding:24px;background:var(--card);border-radius:12px;box-shadow:0 6px 20px rgba(0, 0, 0, 0.06)}
     header{display:flex;align-items:center;gap:20px}
     .header-text{flex:1}
     h1{margin:0;font-size:28px;color:var(--accent)}
-    .role{margin-top:6px;color:var(--muted)}
+    .role{margin-top:6px;color:var(--muted) color(white)}
     .photo{width:150px;height:150px;border-radius:8px;object-fit:cover;border:4px solid #fff;box-shadow:0 6px 16px rgba(0,0,0,0.08)}
 
     .grid{display:grid;grid-template-columns:1fr 320px;gap:20px;margin-top:20px}
-    .card{background:linear-gradient(0deg, rgba(255,255,255,1), rgba(255,255,255,0.94));padding:16px;border-radius:10px}
+    .card{background:linear-gradient(0deg, rgb(0, 0, 0), rgba(0, 0, 0, 0.94));padding:16px;border-radius:10px}
     .section-title{font-weight:700;margin-bottom:8px}
     table{width:100%;border-collapse:collapse}
     table td, table th{padding:8px;border:1px solid #eee}
@@ -32,37 +32,37 @@
   <div class="container">
     <header>
       <div class="header-text">
-        <h1>[NAMA LENGKAP]</h1>
+        <h1>M DZARIL ILHAM <h1>
         <div class="role">Calon Peserta UKK - Teknik Komputer dan Jaringan (TKJ)</div>
-        <div style="margin-top:10px;color:var(--muted)">Absensi: [NO ABSEN] &nbsp;|&nbsp; Kelas: [Sesuaikan]</div>
+        <div style="margin-top:10px;color:var(--muted)">Absensi: [13] &nbsp;|&nbsp; Kelas: [XII TKJ 1]</div>
       </div>
       <!-- Foto: simpan di folder images/photo.jpg -->
-      <img src="images/photo.jpg" alt="Foto [NAMA]" class="photo">
+      <img src="Foto TKJ 1/13.jpg" alt="Foto [DZARIL]" class="photo">
     </header>
 
     <div class="grid">
       <main>
         <section class="card">
           <div class="section-title">Curriculum Vitae (Singkat)</div>
-          <p><strong>Nama:</strong> [NAMA LENGKAP]</p>
-          <p><strong>Tanggal Lahir:</strong> [dd-mm-yyyy]</p>
-          <p><strong>Alamat:</strong> [Kota, Jalan]</p>
-          <p><strong>Kontak:</strong> [nomor telepon / email]</p>
+          <p><strong>Nama:</strong> [MUHAMMAD DZARIL ILHAM ]</p>
+          <p><strong>Tanggal Lahir:</strong> [06-05-2007]</p>
+          <p><strong>Alamat:</strong> [MALANG, JL.KARANGAN KARANGPANDAN RT4 RW1 PAKISAJI ]</p>
+          <p><strong>Kontak:</strong> [085745506057 / mmuhammaddzarililham@gmail.com]</p>
           <hr>
           <div class="section-title">Pendidikan</div>
           <ul>
             <li>SMK Budi Mulia Pakisaji — Teknik Komputer & Jaringan</li>
-            <li>[SMP / SD sebelumnya — optional]</li>
+            <li>[SDN 2 PAKISAJI - SMPN 2 PAKISAJI ]</li>
           </ul>
 
           <div style="margin-top:12px" class="section-title">Pengalaman / Portofolio</div>
-          <p>[Tuliskan 1–3 proyek atau tugas yang pernah dibuat — judul + deskripsi singkat]</p>
+          <p>Saya adalah siswa SMK jurusan Teknik Komputer dan Jaringan (TKJ) yang memiliki minat besar di bidang teknologi, khususnya dalam pembuatan website. Saya terbiasa bekerja dengan berbagai tools pengembangan web dan menyukai tantangan untuk membuat tampilan website yang modern, responsif, dan fungsional.</p>
 
           <div style="margin-top:12px" class="section-title">Daftar Pelajaran Produktif TKJ yang Diingat</div>
           <ul>
-            <li>[Sesuaikan]</li>
-            <li>[Sesuaikan]</li>
-            <li>[Sesuaikan]</li>
+            <li>infrastruktur jaringan </li>
+            <li>teknologi jaringan luas </li>
+            <li>pemrograman web </li>
           </ul>
 
         </section>
@@ -71,45 +71,53 @@
           <div class="section-title">Tabel Keahlian TKJ</div>
           <table class="skills">
             <tr><th>Keahlian</th><th>Level (1-5)</th></tr>
-            <tr><td>[Sesuaikan]</td><td>[Sesuaikan]</td></tr>
-            <tr><td>[Sesuaikan]</td><td>[Sesuaikan]</td></tr>
-            <tr><td>[Sesuaikan]</td><td>[Sesuaikan]</td></tr>
-            <tr><td>[Sesuaikan]</td><td>[Sesuaikan]</td></tr>
+            <tr><td>pemrograman web </td><td>[3]</td></tr>
+            <tr><td>infrastruktur jaringan </td><td>[4]</td></tr>
+            <tr><td>admin server </td><td>[1]</td></tr>
+            <tr><td>teknologi jarigan luas </td><td>[3]</td></tr>
           </table>
         </section>
 
         <!-- Contoh variasi: jika absen=3 tambahkan kutipan motivasi di bawah ini -->
         <section class="card" style="margin-top:16px">
-          <div class="section-title">Elemen Tambahan (sesuai absen)</div>
-          <p>[Tambahkan elemen unik sesuai daftar variasi per absen]</p>
+          <div class="section-title">TIMELINE PENDIDIKAN </div>
+          <p>
+<ul>
+  <li>SD : SDN 2 Pakisaji</li>
+  <li>SMP : SMPN 2 Pakisaji</li>
+  <li>SMK : SMK Budi Mulia Pakisaji</li>
+</ul>
+
+
+          </p>
         </section>
       </main>
 
       <aside>
         <section class="card">
           <div class="section-title">Link & Kontak</div>
-          <p><strong>GitHub:</strong> <a href="https://github.com/username" target="_blank">https://github.com/username</a></p>
-          <p><strong>Portfolio / Deploy:</strong> <a href="https://ukk-nama-tkj.netlify.app" target="_blank">Link Deploy (jika ada)</a></p>
+          <p><strong>GitHub:</strong> <a href="https://github.com/dzaril" target="_blank">https://github.com/username</a></p>
+          <p><strong>Portfolio / Deploy:</strong> <a href="https://dzaril.netlify.app" target="_blank">https://dzaril.netlify.app/</a></p>
         </section>
 
         <section class="card" style="margin-top:16px">
           <div class="section-title">Daftar Mata Pelajaran Favorit</div>
           <ul>
-            <li>[Sesuaikan]</li>
-            <li>[Sesuaikan]</li>
-            <li>[Sesuaikan]</li>
+            <li>[PAI]</li>
+            <li>[PKL]</li>
+            <li>[PJOK]</li>
           </ul>
         </section>
 
         <section class="card" style="margin-top:16px">
           <div class="section-title">Footer UKK TKJ</div>
-          <p>SMK Budi Mulia Pakisaji — UKK TKJ © [Tahun]</p>
+          <p>SMK Budi Mulia Pakisaji — UKK TKJ © [Tahun 2025]</p>
         </section>
       </aside>
     </div>
 
     <footer>
-      Dibuat oleh [NAMA] • Absensi [NO] • Kelas [X/XI/XII]
+      Dibuat oleh [DZARIL] • Absensi [13] • Kelas [XII TKJ 1]
     </footer>
   </div>
 </body>
